<resources>
    <string name="app_name">Primelist Notepad</string>
    <string name="note">notes</string>
    <string name="notes">notes</string>
    <string name="more_notes">notes</string>
    <string name="notes_more">notes</string>
    <string name="notes_notepad">notepad</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="rubrik_takeover">Save</string>
    <string name="NewTask_Title">Add title...</string>
    <string name="Deadline">Deadline</string>
    <string name="NotizHint">Add a note...</string>
    <string name="AddTeilaufgabe">Add subtask</string>
    <string name="teilaufgabe_add">Add subtask</string>
    <string name="edit">Edit</string>
    <string name="hinzufuegen">Add</string>
    <string name="Datum">Date</string>
    <string name="Days">Days</string>
    <string name="Keine">No deadline</string>
    <string name="Prioritaet">Importance</string>
    <string name="Prioritaet_eins">Very High</string>
    <string name="Prioritaet_zwei">High</string>
    <string name="Prioritaet_drei">Normal</string>
    <string name="no_deadline">No deadline</string>
    <string name="Aufgabenbereiche">Categories</string>
    <string name="appInfo">© Primelist</string>
    <string name="sortiert_nach_Anzahl">Arranged by: Total number of tasks</string>
    <string name="sortiert_nach_Prioritaet_rubriken"> Arranged by: Priority</string>
    <string name="sortiert_nach_Deadline_rubriken"> Arranged by: Urgency</string>
    <string name="info_dialog_title">Information</string>
    <string name="dialog_edit_rubrik_title">Change category name</string>
    <string name="dialog_add_rubrik_title">New category</string>
    <string name="Eingabe_Dialog_Add_Rubrik">Enter category name...</string>
    <string name="dialog_add_teilaufgabe_title">New subtask</string>
    <string name="Eingabe_Dialog_Add_Teilaufgabe">Add subtask name...</string>
    <string name="dialog_edit_teilaufgabe_title">Change subtask name</string>
    <string name="Eingabe_Dialog_Edit_Teilaufgabe">Enter new name</string>
    <string name="Toast_sortieren_Prioritaet">Arranged by: Priority</string>
    <string name="Toast_sortieren_Deadline"> Arranged by: Urgency</string>
    <string name="dialog_delete_aufgabe">Delete task</string>
    <string name="dialog_delete_aufgabe_text">Are you sure you want to delete this task?</string>
    <string name="dialog_check_aufgabe">Task completed?</string>
    <string name="dialog_check_aufgabe_text">This task is completed and shall be deleted.</string>
    <string name="dialog_delete_rubrik">Delete category</string>
    <string name="dialog_delete_rubrik_text">Delete this category and all subordinated tasks?</string>

    <string name="rbDays_Days">Days</string>
    <string name="rbDate_Date">Date</string>
    <string name="select_Category">Select category</string>
    <string name="Please_select_category">Please select a category</string>
    <string name="title_datepicker">Deadline (Date)</string>
    <string name="Task">Task</string>
    <string name="Tasks">Tasks</string>

    <string name="Text_Eingabe">Enter text...</string>
    <string name="text_info">Primelist was developed by Eric and Jan. </string>
    <string name="Eingabe_Dialog_Edit_Rubrik">Enter new category name...</string>
    <string name="sort">Arrange</string>
    <string name="title_aufgabe">Title</string>
    <string name="title_notiz">Note</string>
    <string name="title_textaufgaben">Subtask</string>
    <string name="fertig">Done</string>
    <string name="days_left">Days left:</string>
    <string name="save">Save</string>
    <string name="uebernehmen">Übernehmen</string>
    <string name="abrechen">Abbrechen</string>
    <string name="Teilaufgabe_eingeben">Insert Subtask...</string>
    <string name="auswaehlen">Choose</string>
    <string name="NumberPicker_Title">Days until Deadline</string>
    <string name="SelectDate">Choose Deadline</string>
    <string name="what_rubrik_item_setting">Was möchten Sie mit der ausgewählten Rubrik tun?</string>
    <string name="rubrik_change">Enter new category name</string>
    <string name="daysTillDeadline">Days left:</string>
    <string name="teilaufgabe_bearbeiten_title">Titel bearbeiten</string>
    <string name="dialog_numberpicker_title">Days until deadline</string>
    <string name="overview">Overview</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="NoDueTasksToday">No due tasks today</string>
    <string name="Notification_Title_Due_Tasks">Due tasks today:</string>
    <string name="Notification_Title">Primelist</string>
    <string name="dueTask_one">due Task</string>
    <string name="dueTask_more_than_one">due tasks</string>
    <string name="dueTask_none">No due tasks today</string>
    <string name="Notification_Deactivated">Notifications deactivated (For more information keep the notification icon pushed)</string>
    <string name="Notification_Activated">Notifications activated (For more information keep the notification icon pushed)</string>
    <string name="Dialog_Info_Titlxe">Notifications</string>
    <string name="Dialog_Info_Content">If you activate the notification tool, you will receive at the beginning of every day a notification with a list of due tasks.</string>

    <!-- neu -->

    <string name="share">Share Category</string>
    <string name="your_id">Your Id</string>
    <string name="your_key">Your Key</string>
    <string name="user_information_title">Personal Information</string>
    <string name="dialog_connect_title">Share Category</string>
    <string name="Dialog_EditText_userId">Insert Id of the other User...</string>
    <string name="Dialog_EditText_userKey">Insert Key of the other User...</string>
    <string name="enter_Id_and_key">Insert Key and Id of the other User</string>
    <string name="invalid">Invalide</string>
    <string name="wrong_UserId_OR_Key">Invalid</string>
    <string name="Color_Primelist">Primelist</string>
    <string name="Color_Executive">Executive</string>
    <string name="Color_Ocean">Ocean</string>
    <string name="Color_Royal">Royal</string>
    <string name="Color_Candy">Candy</string>
    <string name="colorTheme_Title">Choose a color theme</string>
    <string name="Color_GreenAlley">Green Alley</string>
    <string name="due_today">Due today</string>
    <string name="due_tomorrow">Due tomorrow</string>
    <string name="overdue">Overdue</string>
    <string name="rbDays_Day">Day</string>
    <string name="dialog_getPremium_Title_Deaktiviert">Deactivated - Get Primelist Premium now!</string>

    <string name="Dialog_PremiumAd_Descreption">Dear Primelist User! You can add a limited number of tasks until your free Primelist-Premium trial expires. You can permanently use Primelist Premium for a one-time payment. You are not only getting lots of cool and well-thought-out features, but also support the development of Primelist! We decided to use this old-fashioned business model instead of selling your data or bombing advertisement on you and hope to have acted in your best interest :) Cheers!</string>

    <string name="dialog_premiumOver_description">Dear Primelist User! Your free Primelist-Premium test version has expired. You are now using the free Primelist-Basic version. You can permanently return to Primelist Premium for a one-time payment. You are not only getting lots of cool and well-thought-out features, but also support the development of Primelist! Cheers!</string>
    <string name="Toast_youHavePremium">Congratulations! You are now member of the illustrious circle of Primelist-Premium users! It is important to us, to consider our users’ needs while developing Primelist further. If you wish to shape future versions of Primelist, comment in the Play Store or write us an email. We’re looking forward to hearing from you!</string>


    <string name="test_version_is_running_one">Dear Primelist User! You can add </string>
    <string name="test_version_is_running_two">more tasks until your free Primelist-Premium trial expires. You can permanently return to Primelist Premium for a one-time payment and us all of our cool and well-thought-out features again.</string>
    <string name="test_version_is_running_title">Important Information</string>

    <string name="later">Later!</string>
    <string name="premium">Premium</string>
    <string name="Dialog_PremiumAd_Title">Get Primelist Premium now!</string>
    <string name="dialog_getPremium_Description_Deaktiviert">Dear Primelist User! This feature is exclusively available for Primelist Premium. You are now using the free Primelist-Basic version. You can permanently return to Primelist Premium for a one-time payment. You are not only getting lots of cool and well-thought-out features, but also support the development of Primelist! Cheers!</string>
    <string name="dialog_premiumOver_title">Text version has expired!</string>

    <string name="test_version_is_running">Your test version will expire soon!</string>

    <string name="appWidgetTitel">Due Tasks - By Primelist</string>
    <string name="appWidgetNoData">No due tasks to show</string>

    <!-- Dialog - Werbung für RocketPlan -->
    <string name="dialog_rocketplan_title">RocketPlan - We are moving!</string>
    <string
        name="dialog_rocketplan_text">Goodbye Primelist and hello Rocketplan. I developed Rocketplan to offer you more useful features! Just check out my new app and enjoy it! \n\n And the best: It is for free and you do not have to sign in anywhere! \n\n
        Cheers,\n\n

        Eric - MindGearStudios
    </string>
    <string name="dialog_rocketplan_later">Later</string>
    <string name="dialog_rocketplan_check">Check it out</string>


</resources>
