<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/Linear_Layout_Dialog"
    >

    <TextView
        style="@style/Text_View_Dialog_Title"
        android:id="@+id/dialog_title"
        android:text="@string/dialog_rocketplan_title"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/transparent"
        android:src="@drawable/logo_6"
        android:paddingTop="16dp"/>

    <TextView
        android:id="@+id/tv_dialog_text"
        android:text="@string/dialog_rocketplan_text"
        style="@style/Text_View_Dialog"/>

    <include
        layout="@layout/divider_1px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvLater"
            android:text="@string/dialog_rocketplan_later"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/tvCheck"
            android:text="@string/dialog_rocketplan_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="14sp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:gravity="center_horizontal"
            />
    </LinearLayout>
</LinearLayout>