<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/Linear_Layout_Dialog"
    >

    <TextView
        style="@style/Text_View_Dialog_Title"
        android:id="@+id/dialog_title"
        android:text="@string/user_information_title"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvTitle_UserId"
        style="@style/AufgabeErstellen_Title"
        android:text="@string/your_id"/>

    <TextView
        android:id="@+id/tvUserId"
        style="@style/Information_Text"
        android:text="3"/>

    <TextView
        android:id="@+id/tvTitle_UserKey"
        android:layout_marginTop="32dp"
        style="@style/AufgabeErstellen_Title"
        android:text="@string/your_key"/>

    <TextView
        android:id="@+id/tvUserKey"
        style="@style/Information_Text"
        android:text="37474"
        android:layout_marginBottom="16dp"/>

    <include
        layout="@layout/divider_1px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            />
        <ImageButton
            android:id="@+id/ibUserInformation_Ok"
            style="@style/Image_Button_Dialog_positive"
            android:layout_weight="1"

            />
    </LinearLayout>
</LinearLayout>